--- a/WordCounter.Tests/WordCounterTests.csproj
+++ b/WordCounter.Tests/WordCounterTests.csproj
@@ -10,6 +10,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\xx\xx.csproj" />
+    <ProjectReference Include="..\WordCounter\WordCounter.csproj" />
   </ItemGroup>
 </Project>
